--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -61,7 +61,7 @@
         </thead>
         <tbody>
         <tr>
-            <td>Q1</td>
+            <td style="font-size: 30px">Q1</td>
             <td>HTML</td>
             <td>2/3/21</td>
             <td>85</td>
@@ -118,9 +118,11 @@
         <label for="text-fields-email">
             Email:
         </label>
+
         <input type="email"
                placeholder="jdoe@somewhere.com"
-               id="text-fields-email"/><br/>
+               id="text-fields-email"/>
+        <br/>
         <label for="text-fields-salary-start">
             Starting salary:
         </label>
