--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -6,12 +6,115 @@
 
   <link href="index.css"
         rel="stylesheet"/>
+
+  <script src="https://kit.fontawesome.com/e6afb5d706.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 <!-- <a href="../navigation.html">Back</a>
 <h1>Tuiter</h1>
+
+=
 -->
-<p style = "font-size: 20px" class="pos-relative-nudge-down-right fg-color-white">Bookmarks</p>
-<p style = "font-size: 13px" class="fg-color-gray" @WebDev</p>
+
+<br>
+<p style = "font-size: 20px" class="border-thin border-gray border-solid border-no-bottom border-no-top padded-left margin-bottom-close pos-relative-nudge-down-right fg-color-white">Bookmarks</p>
+<p style = "font-size: 13px" class="border-thin border-gray border-solid border-no-top padded-bottom padded-left pos-relative-nudge-down-right fg-color-light-gray">@WebDev</p>
+<div>
+  <img class="float-left circle-shape float-down-right" src="../headshot.jpeg"
+       width="48px"
+       height="48px"/>
+  <div style = "font-size: 15px" class="float-left float-down-right fg-color-white"> Ananda Francis</div>
+
+  <div style = "font-size: 15px" class="float-left float-down-right div-space fg-color-light-gray"> @ananda_francis ⋅ Apr 20</div>
+  <br>
+  <div style="font-size: 15px" class="fg-color-white div-space pos-relative-nudge-down-right condense-text">
+    Donec suscipit rhoncus dui, quis vehicula tortor posuere commodo. Donec blandit iaculis tristique. Nulla faucibus nunc a massa porta, id tincidunt nisl varius. Sed fringilla felis ligula, non congue massa tempor porttitor. Aliquam pulvinar odio vitae tortor ultrices, in cursus massa commodo.
+  </div>
+  <br>
+  <img class="float-left rounded-corners-top div-space pos-relative-nudge-down-right " src="../sunset.jpeg"
+       width="506px"
+       height="264px"/>
+  <div class="float-done"></div>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="font-size: 15px" class="border-thin border-gray border-solid border-no-bottom condense-text pos-relative-nudge-down-right div-space fg-color-white margin-bottom-close padding-fat-no-bottom">Donec suscipit rhoncus dui, quis vehicula tortor posuere commodo</p>
+<p style="font-size: 15px"  class="border-thin border-gray border-solid border-no-top condense-text pos-relative-nudge-down-right div-space fg-color-light-gray padding-fat-no-top">Donec suscipit rhoncus dui, quis vehicula tortor posuere commodo. Donec blandit iaculis tristique. Nulla faucibus nunc a massa porta, id tincidunt nisl varius. Sed fringilla felis ligula, non congue massa tempor porttitor. </p>
+<div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left far fa-comment fg-color-light-gray'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">120</div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left fas fa-retweet fg-color-light-gray'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">333</div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left fas fa-heart fg-color-red'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">555</div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left fas fa-share fg-color-light-gray'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">11</div>
+  <div class="float-done"></div>
+</div>
+
+<br>
+<br>
+<div>
+  <img class="float-left circle-shape float-down-right" src="../winnie.png"
+       width="48px"
+       height="48px"/>
+  <div style = "font-size: 15px" class="float-left float-down-right fg-color-white"> Ethan Howe</div>
+
+  <div style = "font-size: 15px" class="float-left float-down-right div-space fg-color-light-gray"> @haitian_nation ⋅ Mar 13</div>
+  <br>
+  <div style="font-size: 15px" class="fg-color-white div-space pos-relative-nudge-down-right condense-text">
+    #Shabooya has been going crazy and a Tik Tok post by #RickRoss daughter is going VIRAL bc over 3,000 comments were asking who she was.. so they turned comments off… Y’all think people right for being nosey?
+  </div>
+  <br>
+  <img class="float-left rounded-corners-top div-space pos-relative-nudge-down-right " src="../cow.jpg"
+       width="506px"
+       height="264px"/>
+  <div class="float-done"></div>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="font-size: 15px" class="border-thin border-gray border-solid border-no-bottom condense-text pos-relative-nudge-down-right div-space fg-color-white margin-bottom-close padding-fat-no-bottom">Another Explosive Episode of the #BobbyILoveYouPurrrReunion TOMORROW!!</p>
+<p style="font-size: 15px"  class="border-thin border-gray border-solid border-no-top condense-text pos-relative-nudge-down-right div-space fg-color-light-gray padding-fat-no-top">Looks like #HotWheelz @kingship_713 and his ex-best friend, #TheHandler @davion_superb are still going at it, but host, @theonlyjasonlee wants answers!! 🤔 Chilee, #HotWheelz left the stage and the stage all told him to “Roll Out” too!! 😩 Tune in to Pt. 3 of the #BobbyILoveYouPurrrReunion TOMORROW on @thezeusnetwork at 8pm EST/ 5pm PST!! </p>
+<div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left far fa-comment fg-color-light-gray'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">10045</div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left fas fa-retweet fg-color-light-gray'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">452</div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left fas fa-heart fg-color-red'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">34373</div>
+  <a href="#" class='pos-relative-nudge-down-right div-space float-left fas fa-share fg-color-light-gray'></a>
+  <div class="pos-relative-nudge-down-right div-small-space float-left fg-color-light-gray">223</div>
+  <div class="float-done"></div>
+</div>
+
+<br>
+
 </body>
 </html>
