--- a/public/labs/a4/index.html
+++ b/public/labs/a4/index.html
@@ -22,7 +22,9 @@
             <h3>Right half</h3></div></div>
     <div class="row">
         <div class="col-4 bg-warning">
-            <h3>One thirds</h3></div>
+            <p>React.js is a component based
+                front end library that makes it very easy to build Single Page
+                Applications or SPAs</p></div>
         <div class="col-8 bg-success text-white">
             <h3>Two thirds</h3></div></div>
     <div class="row">
